# AzurLaneLuaScripts_AdjustJPToCN

./: .gitignore  CMakeLists.txt  README.md
.github/: pull.yml
.github/workflows/: Arm64_Apk.yml  Armeabi-v7a_Apk.yml  DebugApk.yml  Dev.yml  Sync.yml  UpdateApk.yml  update.yml  uploadObb.yml
Adjust/: aircraft_template.cpp  copy.py  equip_data_statistics.cpp  expedition_data_template.cpp  gametip.cpp  item_data_statistics.cpp  namecode.py  ndk-build.py  ship_data_breakout.cpp  ship_data_statistics.cpp  ship_skin_template.cpp  ship_skin_words.cpp  shop_template.cpp  spweapon_data_statistics.cpp  story.py  task_data_template.cpp  world_chapter_template.cpp
CN/view/technology/: shipblueprintscene.lua
JP/sharecfgdata/: gametip.lua
Output/: Story_1.cpp  Story_10.cpp  Story_11.cpp  Story_12.cpp  Story_13.cpp  Story_14.cpp  Story_15.cpp  Story_16.cpp  Story_17.cpp  Story_18.cpp  Story_19.cpp  Story_2.cpp  Story_20.cpp  Story_3.cpp  Story_4.cpp  Story_5.cpp  Story_6.cpp  Story_7.cpp  Story_8.cpp  Story_9.cpp  Story_No_1.cpp  Story_No_10.cpp  Story_No_11.cpp  Story_No_12.cpp  Story_No_13.cpp  Story_No_14.cpp  Story_No_15.cpp  Story_No_16.cpp  Story_No_17.cpp  Story_No_18.cpp  Story_No_19.cpp  Story_No_2.cpp  Story_No_20.cpp  Story_No_3.cpp  Story_No_4.cpp  Story_No_5.cpp  Story_No_6.cpp  Story_No_7.cpp  Story_No_8.cpp  Story_No_9.cpp  (+70 more)
